--- a/index.html
+++ b/index.html
@@ -1,29 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GLO Academy. Сайт-портфолио</title>
-    <link rel="stylesheet" href = "CSS/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-<div class="navbar">
-    <img src="images/logo.png" alt="Logo">
-    <nav class="navigation">
+  <body>
+    <div class="navbar conteiner">
+      <img src="images/logo.png" alt="Logo" />
+      <nav class="navigation">
         <ul class="nav-list">
-            <li class="nav-item"><a href="#" class="nav-link active">Главная</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+          <li class="nav-item">
+            <a href="#" class="nav-link active">Главная</a>
+          </li>
+          <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
         </ul>
-    </nav>
-</div>
-</body>
-
+      </nav>
+    </div>
+    <header class="header conteiner">
+      <img
+        src="images/avatar.png"
+        alt="Юлия"
+        class="header-photo"
+        height="240"
+      />
+      <!-- /.header-photo -->
+      <div class="header-text">
+        <strong class="header-strong">Привет 👋</strong>
+        <h1 class="header-heading">
+          <span class="header-primary">Я фронтенд-разработчик</span><br />
+          Меня зовут Юлия и<br />
+          я делаю сайты
+        </h1>
+        <div class="header-links">
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="#" class="social-link"
+                ><img
+                  src="images/icons/linkedin.svg"
+                  alt="linkedin"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link"
+                ><img
+                  src="images/icons/twitter.svg"
+                  alt="twitter"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link"
+                ><img
+                  src="images/icons/github.svg"
+                  alt="github"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link"
+                ><img
+                  src="images/icons/stackoverflow.svg"
+                  alt="stackoverflow"
+                  class="social-logo"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="#" class="social-link"
+                ><img
+                  src="images/icons/youtube.svg"
+                  alt="youtube"
+                  class="social-logo"
+              /></a>
+            </li>
+          </ul>
+          <a href="#" class="cv-download" download>
+            <img
+              src="images/icons/download.svg"
+              alt="download-icon"
+              class="cv-icon"
+            />
+            <span class="cv-text">Скачать резюме</span>
+          </a>
+        </div>
+        <!-- /.header-links -->
+      </div>
+      <!-- /.header-text -->
+    </header>
+    <!-- /.header -->
+  </body>
 </html>
