--- a/index.html
+++ b/index.html
@@ -1,105 +1,116 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GLO Academy. Сайт-портфолио</title>
-    <link rel="stylesheet" href="CSS/normalize.css" />
-    <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="navbar conteiner">
-      <img src="images/logo.png" alt="Logo" />
-      <nav class="navigation">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="#" class="nav-link active">Главная</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GLO Academy. Сайт-портфолио</title>
+  <link rel="stylesheet" href="CSS/normalize.css" />
+  <link rel="stylesheet" href="CSS/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="navbar conteiner">
+    <img src="images/logo.png" alt="Logo" />
+    <nav class="navigation">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#" class="nav-link active">Главная</a>
+        </li>
+        <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+      </ul>
+    </nav>
+  </div>
+  <header class="header conteiner">
+    <img src="images/avatar.png" alt="Юлия" class="header-photo" height="240" />
+    <!-- /.header-photo -->
+    <div class="header-text">
+      <strong class="header-strong">Привет 👋</strong>
+      <h1 class="header-heading">
+        <span class="header-primary">Я фронтенд-разработчик</span><br />
+        Меня зовут Юлия и<br />
+        я делаю сайты
+      </h1>
+      <div class="header-links">
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="#" class="social-link"><img src="images/icons/linkedin.svg" alt="linkedin"
+                class="social-logo" /></a>
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Проекты</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Обо мне</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Связаться</a></li>
+          <li class="social-item">
+            <a href="#" class="social-link"><img src="images/icons/twitter.svg" alt="twitter" class="social-logo" /></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link"><img src="images/icons/github.svg" alt="github" class="social-logo" /></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link"><img src="images/icons/stackoverflow.svg" alt="stackoverflow"
+                class="social-logo" /></a>
+          </li>
+          <li class="social-item">
+            <a href="#" class="social-link"><img src="images/icons/youtube.svg" alt="youtube" class="social-logo" /></a>
+          </li>
         </ul>
-      </nav>
-    </div>
-    <header class="header conteiner">
-      <img
-        src="images/avatar.png"
-        alt="Юлия"
-        class="header-photo"
-        height="240"
-      />
-      <!-- /.header-photo -->
-      <div class="header-text">
-        <strong class="header-strong">Привет 👋</strong>
-        <h1 class="header-heading">
-          <span class="header-primary">Я фронтенд-разработчик</span><br />
-          Меня зовут Юлия и<br />
-          я делаю сайты
-        </h1>
-        <div class="header-links">
-          <ul class="social-list">
-            <li class="social-item">
-              <a href="#" class="social-link"
-                ><img
-                  src="images/icons/linkedin.svg"
-                  alt="linkedin"
-                  class="social-logo"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="#" class="social-link"
-                ><img
-                  src="images/icons/twitter.svg"
-                  alt="twitter"
-                  class="social-logo"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="#" class="social-link"
-                ><img
-                  src="images/icons/github.svg"
-                  alt="github"
-                  class="social-logo"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="#" class="social-link"
-                ><img
-                  src="images/icons/stackoverflow.svg"
-                  alt="stackoverflow"
-                  class="social-logo"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="#" class="social-link"
-                ><img
-                  src="images/icons/youtube.svg"
-                  alt="youtube"
-                  class="social-logo"
-              /></a>
-            </li>
-          </ul>
-          <a href="#" class="cv-download" download>
-            <img
-              src="images/icons/download.svg"
-              alt="download-icon"
-              class="cv-icon"
-            />
-            <span class="cv-text">Скачать резюме</span>
-          </a>
-        </div>
-        <!-- /.header-links -->
+        <a href="#" class="cv-download" download>
+          <img src="images/icons/download.svg" alt="download-icon" class="cv-icon" />
+          <span class="cv-text">Скачать резюме</span>
+        </a>
       </div>
-      <!-- /.header-text -->
-    </header>
-    <!-- /.header -->
-  </body>
+      <!-- /.header-links -->
+    </div>
+    <!-- /.header-text -->
+  </header>
+  <!-- /.header -->
+  <section class="portfolio">
+    <div class="conteiner">
+      <h2 class="section-heading">Последние проекты</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="images/image 1.jpg" alt="Мобильное приложение" class="card-image" />
+          <div class="card-text-wrapper">
+            <h3 class="card-title">Мобильное приложение</h3>
+            <ul class="tags">
+              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+              <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+              <li class="tags-item"><a href="#" class="tag">Git</a></li>
+              <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
+            </ul>
+            <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.</p>
+            <div class="card-buttons"><a href="#" class="card-button"><img src="images/icons/code.svg" alt="Code icon"
+                  class="card-button-icon"><span class="card-button-text">Код</span></img></a>
+              <a href="#" class="card-button"><img src="images/icons/demo.svg" alt="Check icon"
+                  class="card-button-icon"><span class="card-button-text">Демо</span></img></a>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/image 2.jpg" alt="Мобильное приложение" class="card-image" />
+          <div class="card-text-wrapper">
+            <h3 class="card-title">Одностраничный промо-сайт</h3>
+            <ul class="tags">
+              <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+              <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+            </ul>
+            <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.</p>
+            <div class="card-buttons"><a href="#" class="card-button"><img src="images/icons/code.svg" alt="Code icon"
+                  class="card-button-icon"><span class="card-button-text">Код</span></img></a>
+              <a href="#" class="card-button"><img src="images/icons/demo.svg" alt="Check icon"
+                  class="card-button-icon"><span class="card-button-text">Демо</span></img></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
