--- a/index.html
+++ b/index.html
@@ -111,6 +111,57 @@
       </div>
     </div>
   </section>
+  <section class="developer conteiner">
+    <img src="images/developer.jpg" alt="Юлия" class="developer-photo">
+    <div class="developer-about">
+      <span class="developer-hello">Рада вас видеть</span>
+      <h2 class="developer-title">Я Юлия</h2>
+      <p class="developer-text">Я разрабатываю сайты для людей и компаний.</p>
+      <span class="motto">Фронтенд-разработка</span>
+      <p class="developer-text">Могу собрать страницу для вашей компании, даже если запускать её нужно уже завтра. Из
+        инструментов есть: Tilda, Webflow, Figma, HTML, CSS, JavaScript и Wordpress</p>
+      <img src="images/sign.png" alt="Юлия" class="developer-sign">
+    </div>
+  </section>
+  <section class="skills conteiner">
+    <h2 class="skills-title">Работаю с разными языками и инструментами</h2>
+    <ul class="tags">
+      <li class="tags-item"><a href="#" class="tag">HTML</a></li>
+      <li class="tags-item"><a href="#" class="tag">CSS</a></li>
+      <li class="tags-item"><a href="#" class="tag">JavaScript</a></li>
+      <li class="tags-item"><a href="#" class="tag">Wordpress</a></li>
+      <li class="tags-item"><a href="#" class="tag">npm</a></li>
+      <li class="tags-item"><a href="#" class="tag">Reactjs</a></li>
+      <li class="tags-item"><a href="#" class="tag">UI Design</a></li>
+      <li class="tags-item"><a href="#" class="tag">SASS</a></li>
+    </ul>
+  </section>
+  <!-- /.skills -->
+  <section class="feedback form-conteiner">
+    <h2 class="feedback-title">Готова обсудить проект...</h2>
+    <form action="#" method="get">
+      <div class="input-group">
+        <label for="username" class="input-label">Имя</label>
+        <input type="text" id="username" class="input">
+      </div>
+      <div class="input-group">
+        <label for="useremail" class="input-label">Email</label>
+        <input type="text" id="useremail" class="input">
+      </div>
+      <div class="input-group">
+        <label for="usermessage" class="input-label">Сообщение</label>
+        <textarea id="usermessage" class="input textarea" cols="30" rows="10"></textarea>
+      </div>
+      <div class="button-group">
+        <button type="submit" class="submit-button">
+          <img src="images/icons/send.svg" alt="send-icon" class="cv-icon" />
+          <span class="cv-text">Отправить</span>
+        </button>
+      </div>
+
+    </form>
+  </section>
+  <!-- /.feedback -->
 </body>
 
 </html>
